[tool.poetry]
name = "inkbird"
version = "0.1.1"
description = ""
authors = ["Hirotaka Ichikawa <hichtakk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bluepy = "^1.3.0"
prometheus_client = "^0.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[tool.poetry.scripts]
inkbird-exporter = "inkbird.prometheus:run_exporter"
inkbird = "inkbird.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
